--- a/notebooks/models/classification_task_loss_tweet_mean.ipynb
+++ b/notebooks/models/classification_task_loss_tweet_mean.ipynb
@@ -26,9 +26,7 @@
    "execution_count": 1,
    "id": "b0468cab",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -972,40 +970,28 @@
    "outputs": [],
    "source": [
     "path_140 = f'{gs.data_path}/nlp/embeddings/140'\n",
-    "a = np.load(path_140+'/development_140_final_permanent.npy')"
+    "a = np.load(path_140+'/development_140_50.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "469bfd2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.0834819 , -0.00376278,  0.2954853 , ...,  0.00209416,\n",
-       "        -0.00044725, -0.03948679],\n",
-       "       [ 0.1633248 , -0.0378776 ,  0.14849399, ..., -0.0316375 ,\n",
-       "        -0.04201998,  0.34096443],\n",
-       "       [-0.04395941, -0.28131193,  0.26860944, ..., -0.03856604,\n",
-       "         0.02407258, -0.15145411],\n",
-       "       ...,\n",
-       "       [ 0.13575707, -0.01304994,  0.18076054, ..., -0.03827782,\n",
-       "        -0.19625903, -0.04933203],\n",
-       "       [-0.00779551, -0.02711803,  0.10427203, ..., -0.02906885,\n",
-       "        -0.12142759,  0.04888946],\n",
-       "       [ 0.05977851, -0.06536224,  0.22635887, ...,  0.06177156,\n",
-       "        -0.06707874,  0.04495548]])"
+       "(5000, 140, 768)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[:100]"
+    "a.shape"
    ]
   },
   {
